--- a/app/views/global_public/_sharing_icons.html.erb
+++ b/app/views/global_public/_sharing_icons.html.erb
@@ -1,5 +1,5 @@
 <div class="icons--social">
-  <div class="icons__header">Share the survey</div>
+  <div class="icons__header"><%= t('social.header') %></div>
   <div class="icons__wrapper flex-inline flex-h-between">
     <%= create_social_facebook_link %>
     <%= create_social_twitter_link %>
