--- a/app/views/responses/new.html.erb
+++ b/app/views/responses/new.html.erb
@@ -10,9 +10,9 @@
   <div class="flex flex-h-between">
     <pagination-button 
       type="previous"
-      :section-totals="<%= @question_section_counts %>">Previous</pagination-button>
+      :section-totals="<%= @question_section_counts %>"><%= t('buttons.previous') %></pagination-button>
     <pagination-button type="next" class="button--large-chevrons">
-      Next<i class="material-icons">chevron_right</i><i class="material-icons">chevron_right</i>
+      <%= t('buttons.next') %><i class="material-icons">chevron_right</i><i class="material-icons">chevron_right</i>
     </pagination-button>
   </div>
 </div>
