Display correct page titles in all translated languages

--- a/app/views/static_pages/about_go_fox.html.erb
+++ b/app/views/static_pages/about_go_fox.html.erb
@@ -1,1 +1,1 @@
-<%= render partial: 'static_page', locals: { title: 'About Go-Fox', page: 'about_go_fox' } %>
+<%= render partial: 'static_page', locals: { title: I18n.t('nav.about_gofox'), page: 'about_go_fox' } %>
