--- a/app/views/static_pages/about_project.html.erb
+++ b/app/views/static_pages/about_project.html.erb
@@ -1,2 +1,2 @@
 
-<%= render partial: 'static_page', locals: { title: 'About the Project', page: 'about_project' } %>
+<%= render partial: 'static_page', locals: { title: I18n.t('nav.about_project'), page: 'about_project' } %>
