pass translation to submit button

--- a/app/views/responses/_form.html.erb
+++ b/app/views/responses/_form.html.erb
@@ -23,6 +23,6 @@
     </page-item>
   <% end %>
 
-  <submit id="form-survey"></submit>
+  <submit id="form-survey" button-text="<%= t('buttons.get_results')%>"></submit>
 
 <% end %>
