don't use self-closing tag in erb

--- a/app/views/surveys/_customised_question_fields.html.erb
+++ b/app/views/surveys/_customised_question_fields.html.erb
@@ -25,7 +25,7 @@
     <% end %>
   </div>
 
-  <div id="options-container" />
+  <div id="options-container"></div>
 
   <%= link_to_add_association f, :options, {
       'data-association-insertion-method': 'append',
