update unep-wcmc name and split resources into bullet points

--- a/app/views/global/_researcher_logo_banner.html.erb
+++ b/app/views/global/_researcher_logo_banner.html.erb
@@ -4,6 +4,6 @@
   <%= link_to "", "https://www.ed.ac.uk/geosciences/", title: "University of Edinburgh - School of Geosciences", class: "logo--uoe" %>
 </div>
 <div class="flex-wrap flex-center">
-  <%= link_to "", "https://www.unep-wcmc.org/", title: "UN Environment World Conservation Monitoring Centre", class: "logo--unepwcmc" %>
+  <%= link_to "", "https://www.unep-wcmc.org/", title: "UN Environment Programme World Conservation Monitoring Centre", class: "logo--unepwcmc" %>
   <%= link_to "", "https://www.fauna-flora.org/", title: "Fauna & Flora International", class: "logo--ffi" %>
 </div>
